[gd_scene load_steps=7 format=3 uid="uid://cq2q4nosptwyn"]

[ext_resource type="Script" uid="uid://dbjqdr0jqrwng" path="res://scripts/ui/hud.gd" id="1_ahhtf"]
[ext_resource type="PackedScene" uid="uid://bni73l8toacm" path="res://scenes/pause_menu.tscn" id="2_oo0fn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xosvn"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.054902, 0.054902, 0.054902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_42puf"]
bg_color = Color(0.443137, 0.643137, 0.643137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ngyvp"]
bg_color = Color(0.470588, 0.654902, 0.490196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_adx1n"]
bg_color = Color(0.709804, 0.541176, 0.654902, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ahhtf")

[node name="Panel" type="Panel" parent="."]
offset_left = 1697.0
offset_top = 82.0
offset_right = 1897.0
offset_bottom = 232.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xosvn")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 1702.0
offset_top = 32.0
offset_right = 1882.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 30
text = "NEXT PIECE:"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 1702.0
offset_top = 282.0
offset_right = 1882.0
offset_bottom = 327.0
theme_override_font_sizes/font_size = 30
text = "SCORE: 0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="GameOverLabel" type="Label" parent="."]
anchors_preset = -1
anchor_right = 0.35924938
anchor_bottom = 0.1537037
offset_left = 495.0
offset_top = 366.0
offset_right = 736.0
offset_bottom = 424.0
theme_override_font_sizes/font_size = 40
text = "GAME OVER!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="NewGameButton" type="Button" parent="."]
process_mode = 3
offset_left = 1702.0
offset_top = 524.0
offset_right = 1882.0
offset_bottom = 564.0
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_42puf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ngyvp")
theme_override_styles/hover = SubResource("StyleBoxFlat_adx1n")
text = "NEW GAME"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="."]
offset_right = 349.0
offset_bottom = 117.0
text = "fff"

[node name="MaxScoreLabel" type="Label" parent="."]
offset_left = 1669.0
offset_top = 378.0
offset_right = 1919.0
offset_bottom = 424.0
theme_override_font_sizes/font_size = 30
text = "Max score:"
vertical_alignment = 1

[node name="TimeLeftLabel" type="Label" parent="."]
offset_left = 1671.0
offset_top = 428.0
offset_right = 1811.0
offset_bottom = 474.0
theme_override_font_sizes/font_size = 30
text = "Time left:"
vertical_alignment = 1

[node name="WinLabel" type="Label" parent="."]
offset_left = 887.0
offset_top = 450.0
offset_right = 1075.0
offset_bottom = 505.0
theme_override_font_sizes/font_size = 40
text = "YOU WIN!"

[node name="LvlLabel" type="Label" parent="."]
offset_left = 1738.0
offset_top = 339.0
offset_right = 1847.0
offset_bottom = 381.0
theme_override_font_sizes/font_size = 30
text = "Level: 1"

[node name="PauseButton" type="Button" parent="."]
offset_left = 20.0
offset_top = 28.0
offset_right = 92.0
offset_bottom = 103.0
text = "Pause"

[node name="PauseMenu" parent="." instance=ExtResource("2_oo0fn")]
